--- a/AI4ALL- FInal Project .ipynb
+++ b/AI4ALL- FInal Project .ipynb
@@ -37229,7 +37229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b3f0ee9",
+   "id": "72cddf2c",
    "metadata": {},
    "source": [
     "### Mario AI at 10K frames/steps of training \n"
@@ -37238,7 +37238,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "f440aeb1",
+   "id": "94887ce2",
    "metadata": {
     "scrolled": false
    },
@@ -37266,7 +37266,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8e729e5",
+   "id": "afe31e7a",
    "metadata": {},
    "source": [
     "### Mario AI at 25K frames/steps of training "
@@ -37275,7 +37275,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "4f8c0fe2",
+   "id": "73db77b6",
    "metadata": {
     "scrolled": false
    },
@@ -37303,7 +37303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f39ddcb7",
+   "id": "68de7ba8",
    "metadata": {},
    "source": [
     "### Mario AI at 50K frames/steps of training "
@@ -37312,7 +37312,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d4d1d408",
+   "id": "ab0fbbbb",
    "metadata": {
     "scrolled": false
    },
@@ -37357,7 +37357,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eee2d461",
+   "id": "659e8d05",
    "metadata": {},
    "source": [
     "## Further discussion points: The Ethics of Reinforcement Learning "
@@ -37365,7 +37365,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "219d60a8",
+   "id": "17224205",
    "metadata": {},
    "source": [
     "This project can serve as a great case study for the limitations and ethical concerns Reinforcement Learning can bring. The shortcommings of this project show a great fault in rushed training or lack of proper testing. When an AI is trained and is using RL as a learning method proper training time is needed, these things simply cannot be rushed (despite how long training may take on some workstations) and when AI is shipped without being trained for long enough like our end results they can be met with subpar performance or at worst create disasterous predictions. For large AI development training may take hundreds or thousands of hours, but when these products are being released to potentially thousands or millions of users these RL AIs need to have been throughly trained to make the best predictions possible.\n",
@@ -37383,10 +37383,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2444dbe",
+   "id": "66f34a92",
    "metadata": {},
    "source": [
-    "This project as it stands serves much room for improvement, for instance "
+    "This project as it stands serves much room for improvement, for instance the training phase needs to be longer to ensure the model is better trained to make more informed predictions. Additionally we must train this AI in multiple enviornments to varify it's performance in any situation it is put in."
    ]
   },
   {
