--- a/AI4ALL- FInal Project .ipynb
+++ b/AI4ALL- FInal Project .ipynb
@@ -2,6 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "4318c92c",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "# AI4ALL Final project:\n",
+    "**contributors** :\n",
+    "\n",
+    "Torrence Barbour\n",
+    "\n",
+    "Ryan Edwards\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "287a2cb6",
    "metadata": {},
    "source": [
@@ -37422,7 +37438,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
